--- a/Bugatti.html
+++ b/Bugatti.html
@@ -67,7 +67,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">聯繫我</h2>
-								<form method="post" action="#">
+								<form method="post" action="https://api.apispreadsheets.com/data/5696/">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">姓名</label>
@@ -83,7 +83,7 @@
 										</div>
 									</div>
 									<ul class="actions">
-										<li><input type="submit" value="傳送回復" class="primary" /></li>
+										<li><input type="submit" value="傳送回復(完成後請自行返回且刷新頁面)" class="primary" /></li>
 										<li><input type="reset" value="重新填寫" /></li>
 									</ul>
 								</form>
